Bug 198925 - [iOS] Pressing key while holding Command should not insert character
Summary: [iOS] Pressing key while holding Command should not insert character
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: WebKit Local Build
Hardware: iPhone / iPad iOS 12
: P2 Normal
Assignee: Daniel Bates
URL:
Keywords: InRadar, PlatformOnly
Depends on:
Blocks: 190571
  Show dependency treegraph
 
Reported: 2019-06-17 11:13 PDT by Daniel Bates
Modified: 2019-06-18 13:59 PDT (History)
3 users (show)

See Also:


Attachments
Patch and test (5.21 KB, patch)
2019-06-17 11:30 PDT, Daniel Bates
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Bates 2019-06-17 11:13:39 PDT
Seen on iOS.

Steps to reproduce:

1. Visit <data:text/html,<input%20type="text">>
2. Focus the input.
3. Press Command + Shift + v.

Then nothing should be inserted. But a v is inserted.
Comment 1 Daniel Bates 2019-06-17 11:14:14 PDT
<rdar://problem/51778811>
Comment 2 Daniel Bates 2019-06-17 11:30:30 PDT
Created attachment 372259 [details]
Patch and test

If I have a moment, I will look to write a more comprehensive test. Maybe I could modify the fast/events/ios/key-event-comprehensive tests. I didn't want to now since these tests already run longish and I did not want to tempt fate with a modification that could make them run even longer ... and timeout. Maybe I could duplicate these tests as an alternative.
Comment 3 Brent Fulgham 2019-06-18 08:36:37 PDT
Comment on attachment 372259 [details]
Patch and test

View in context: https://bugs.webkit.org/attachment.cgi?id=372259&action=review

Looks reasonable. r=me.

> Source/WebKit/ChangeLog:11
> +        time of writing) should not insert v. This matches iOS and Mac platform conventions.

Yes!
Comment 4 Daniel Bates 2019-06-18 13:59:38 PDT
Comment on attachment 372259 [details]
Patch and test

Clearing flags on attachment: 372259

Committed r246564: <https://trac.webkit.org/changeset/246564>
Comment 5 Daniel Bates 2019-06-18 13:59:39 PDT
All reviewed patches have been landed.  Closing bug.